k8s/ingress/nginx.pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deploy
    namespace: ingress-nginx
spec:
    replicas: 2
    selector:
        matchLabels:
            project: schat
            service: web
            version: "0.1"
    template:
        metadata:
            name: nginxpod
            labels:
                project: schat
                service: web
                version: "0.1"
        spec:
            containers:
                - name: nginx-c
                  image: nginx
                  ports:
                     - name: http
                       containerPort: 80
