k8s/ingress/nginx.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: a.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service  # kind: Service   metadata:  name: nginx-service 
          servicePort: 80             # ports: - port: 8000  targetPort: 80
